@@ -393,7 +393,6 @@ int ti9x_file_write_regular(const char *fname, Ti9xRegular *content, char **real
   FILE *f;
   int i;
   char *filename = NULL;
-  char basename[64];
   uint32_t offset = 0x52;
   int **table;
   int num_folders;
@@ -408,18 +407,8 @@ int ti9x_file_write_regular(const char *fname, Ti9xRegular *content, char **real
   } 
   else 
   {
-    filename = (char *) malloc(8+1+8+1+3+1);
-	
-	ticonv_varname_to_filename_s(content->model_dst, content->entries[0]->folder, basename);	
-    strcpy(filename, basename);
-    strcat(filename, ".");
-	
-	ticonv_varname_to_filename_s(content->model_dst, content->entries[0]->name, basename);
-    strcat(filename, basename);
-    strcat(filename, ".");
-
-    strcat(filename, tifiles_vartype2fext(content->model_dst, content->entries[0]->type));
-    if (real_fname != NULL)
+	filename = tifiles_build_filename(content->model_dst, content->entries[0]);
+	if (real_fname != NULL)
       *real_fname = strdup(filename);
   }
 
@@ -582,7 +571,6 @@ int ti9x_file_write_flash(const char *fname, Ti9xFlash *head, char **real_fname)
   FILE *f;
   Ti9xFlash *content = head;
   char *filename;
-  char basename[64];
 
   if (fname)
   {
@@ -592,14 +580,18 @@ int ti9x_file_write_flash(const char *fname, Ti9xFlash *head, char **real_fname)
   }
   else
   {
-	ticonv_varname_to_filename_s(content->model, content->name, basename);
+	  VarEntry ve;
 
-    filename = (char *) malloc(strlen(basename) + 1 + 5 + 1);
-    strcpy(filename, basename);
-    strcat(filename, ".");
-    strcat(filename, tifiles_fext_of_flash_app(content->model));
-    if (real_fname != NULL)
-      *real_fname = strdup(filename);
+	  for (content = head; content != NULL; content = content->next)
+		if(content->data_type == TI83p_AMS || content->data_type == TI83p_APPL)
+			break;
+
+	  strcpy(ve.name, content->name);
+	  ve.type = content->data_type;
+
+	  filename = tifiles_build_filename(content->model, &ve);
+	  if (real_fname != NULL)
+		*real_fname = strdup(filename);
   }
 
   f = gfopen(filename, "wb");
